Closed
Bug 559912
Opened 16 years ago
Closed 15 years ago
Setter exposes JSOP_SETMETHOD optimization
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: jorendorff, Assigned: bhackett1024)
References
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
1.32 KB,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
function s(f) { this._m = f; }
function C() {
Object.defineProperty(this, "m", {set: s});
this.m = function () {};
}
var a = new C, b = new C;
assertEq(a._m === b._m, false);
| Reporter | ||
Updated•16 years ago
|
Summary: Setter defeats JSOP_SETMETHOD optimization → Setter exposes JSOP_SETMETHOD optimization
Updated•16 years ago
|
blocking2.0: --- → final+
| Assignee | ||
Updated•15 years ago
|
Assignee: general → bhackett1024
| Assignee | ||
Comment 1•15 years ago
|
||
This looks to have been fixed by the changes in bug 592412 and/or bug 614051, except there is a lingering bogus assertion.
Attachment #496996 -
Flags: review?(brendan)
Updated•15 years ago
|
Attachment #496996 -
Flags: review?(brendan) → review+
| Assignee | ||
Comment 3•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 4•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•