Fix bogus assert when using SETMETHOD on a property with a setter, bug 559912. r=brendan